2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/serial.c (options), (grub_cmd_serial): Fix handling
	of SI suffixes.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Support --base-clock for serial command to handle weird cards with
	non-standard base clock.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_read_symlink): Use memcpy rather
	strncpy.
	* grub-core/fs/jfs.c (grub_jfs_lookup_symlink): Likewise.
	* grub-core/kern/misc.c (grub_strncpy): Move from here ...
	* include/grub/misc.h (grub_strncpy): ... to here. Make inline.
	* grub-core/net/net.c (grub_net_addr_to_str): Use COMPILE_TIME_ASSERT
	+ strcpy rather than strncpy.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (nvpair_name): Use correct type for size.
	(check_pool_label): Likewise. Fixes overflow.
	(nvlist_find_value): Fix comparison.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_strcat): Removed. All users changed to
	more appropriate functions.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/efi/efi.c (grub_efi_get_filename): Avoid inefficient
	realloc.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Do not use UUID search on EFI.

2013-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c: Unify section-finding algorithm. Saves 30 bytes
	on core size.

2013-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c (grub_realloc): Don't copy more data than we have.

2013-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/gzio.c (huft_build): Use zalloc for safety.
	(initialize_tables): reset tl and td to NULL after freeing.

2013-10-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_mbi2.c: Implement network tag.

2013-10-28  Vladimir Serbinenko  <phcoder@gmail.com>
