@@ -518,6 +518,8 @@ grub_efidisk_open (const char *name, struct grub_disk *disk)
   grub_dprintf ("efidisk", "m = %p, last block = %llx, block size = %x\n",
 		m, (unsigned long long) m->last_block, m->block_size);
   disk->total_sectors = m->last_block + 1;
+  /* Don't increase this value due to bug in some EFI.  */
+  disk->max_agglomerate = 0xa0000 >> (GRUB_DISK_CACHE_BITS + GRUB_DISK_SECTOR_BITS);
   if (m->block_size & (m->block_size - 1) || !m->block_size)
     return grub_error (GRUB_ERR_IO, "invalid sector size %d",
 		       m->block_size);
@@ -550,24 +552,11 @@ grub_efidisk_readwrite (struct grub_disk *disk, grub_disk_addr_t sector,
   d = disk->data;
   bio = d->block_io;
 
-  while (size > 0)
-    {
-      grub_size_t len;
-      len = 0x500;
-      if (len > size)
-	len = size;
-      status = efi_call_5 ((wr ? bio->write_blocks : bio->read_blocks), bio,
-			   bio->media->media_id,
-			   (grub_efi_uint64_t) sector,
-			   (grub_efi_uintn_t) len << disk->log_sector_size,
-			   buf);
-      size -= len;
-      buf += len << disk->log_sector_size;
-      sector += len;
-      if (status != GRUB_EFI_SUCCESS)
-	return status;
-    }
-  return GRUB_EFI_SUCCESS;
+  return efi_call_5 ((wr ? bio->write_blocks : bio->read_blocks), bio,
+		     bio->media->media_id,
+		     (grub_efi_uint64_t) sector,
+		     (grub_efi_uintn_t) size << disk->log_sector_size,
+		     buf);
 }
 
 static grub_err_t
